[package]
name = "gecko-test"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/gecko"
license-file = "../../LICENSE"
readme = "../../README.md"
description = "The gecko_test crate helps you to write Rust tests for your programs with gecko."

[lib]
proc-macro = true

[dev-dependencies]
macrotest = "1"

[dependencies]
syn             = { workspace = true }
quote           = { workspace = true }
proc-macro2     = { workspace = true }
darling         = { workspace = true }
