[package]
name = "gecko-tests"
version = "0.1.0"
description = "Created with gecko"
edition = "2021"

[dependencies]
assert_matches = "1.4.0"

[dependencies.gecko-client]
path = "../../../crates/client"
features = ["fuzzing"]

[dependencies.program_client]
path = "../.program_client"

[dependencies.fuzzer]
path = "../programs/fuzzer"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
